Add register service

--- a/views/auth/register.hbs
+++ b/views/auth/register.hbs
@@ -1,6 +1,6 @@
 <div class="register-box">
     <h1>Register</h1>
-    <form action="#">
+    <form method="POST">
         <label>Username</label>
         <input type="text" placeholder="Username.." name="username">
         <label>Email</label>
