--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,6 +1,6 @@
 <div class="login-box">
     <h1>Login</h1>
-    <form action="#">
+    <form method="POST">
         <label>Email</label>
         <input type="text" placeholder="Email.." name="email">
         <label>Password</label>
