--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,11 +1,14 @@
-<div class="login-box">
-    <h1>Login</h1>
-    <form method="post">
-        <label>Email</label>
-        <input type="text" placeholder="Email.." name="email">
-        <label>Password</label>
-        <input type="password" placeholder="Password.." name="password">
-        <input type="submit" value="Submit">
-    </form>
-    <p>Not have an account? <a href="/auth/register">Register here</a></p>
-</div>
+<!-- Login Page (Only for Guest users) -->
+<section id="login">
+    <div class="form">
+        <h2>Login</h2>
+        <form class="login-form" method="POST" action="#">
+            <input type="text" name="email" id="email" placeholder="email" />
+            <input type="password" name="password" id="password" placeholder="password" />
+            <button type="submit">Login</button>
+            <p class="message">
+                Not registered? <a href="/auth/register">Create an account</a>
+            </p>
+        </form>
+    </div>
+</section>
