--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,45 +1,23 @@
-<div class="container">
-    <div class="course-message">
-        <h1 id="site-title">Course Book</h1>
-        <h2 id="site-mid-title">Show your opportunities!</h2>
+<!-- Home page -->
+<section id="home">
+    <h1>Welcome to Earth Treasure Vaul</h1>
+    <h2>From sparkling geodes to ancient fossils, EarthTreasureVault offers an exclusive collection of natural
+        treasures, each with its own unique story and geological significance.</h2>
+</section>
+
+<section id="last-added">
+
+    {{#each stones}}
+    <div>
+        <img src="{{image}}">
+        <p>Name: {{name}}</p>
+        <p>Category: {{category}}</p>
+        <a class="details-btn" href="/stones/{{_id}}">Details</a>
     </div>
+    {{else}}
+    <p class="no-post">There are no gems and minerals!</p>
 
-    <div class="last-course">
-        <div class="info">
-            <h2 class="title">Spanish 1-4: Beginner, Elementary, Intermediate and Advanced</h2>
-            <h4 class="genre">Type: Language</h4>
-            <h4 class="certificate">Certificate: Yes</h4>
-            <h4 class="price">Price: €15</h4>
-            <div class="learn-more">
-                <a href="#">Learn More...</a>
-            </div>
-        </div>
-
-        <div class="info">
-            <h2 class="title">Classroom Management Essentials</h2>
-            <h4 class="genre">Type: Management</h4>
-            <h4 class="certificate">Certificate: Yes</h4>
-            <h4 class="price">Price: €25</h4>
-            <div class="learn-more">
-                <a href="#">Learn More...</a>
-            </div>
-        </div>
-
-        <div class="info">
-            <h2 class="title">Art History Prehistory to the Renaissance</h2>
-            <h4 class="genre">Type: Art History</h4>
-            <h4 class="certificate">Certificate: Yes</h4>
-            <h4 class="price">Price: €17</h4>
-            <div class="learn-more">
-                <a href="#">Learn More...</a>
-            </div>
-        </div>
+    {{/each}}
 
 
-    </div>
-
-    <!-- If there are still no course posts on the database -->
-    <!-- <article class="not-available-course">
-                    <h1>No course created yet.</h1>
-                </article> -->
-</div>
+</section>
