--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,47 +5,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles/styles.css" />
     <title>Home Page</title>
-    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
 
-    <!-- In case of error, you should display div with class "errorContainer" -->
-    <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
-
-    <!-- <div>
-            <div class="errorContainer">
-                <p>Error</p>
-            </div>
-        </div> -->
-
-    <div class="navigation">
-        <nav>
-            <img src="/images/logo.png">
-            <ul>
-                <!-- Guest users and Logged users -->
-                <li><a href="/">Home</a></li>
-                <li><a href="#">All Courses</a></li>
-                <!--For guest users-->
-                <li><a href="/auth/login">Login</a></li>
-                <li><a href="/auth/register">Register</a></li>
-                <!--For loggin users-->
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Create Course Offers</a></li>
-                <li><a href="/auth/logout">Logout</a></li>
-
-            </ul>
-        </nav>
+    {{#if error}}
+    <div>
+        <div class="errorContainer">
+            <p>{{error}}</p>
+        </div>
     </div>
+    {{/if}}
 
-    <main>
+    <div id="wrapper">
+        <header>
+            <!-- Navigation -->
+            <nav>
+                <div>
+                    <a href="/">Home</a>
+                    <a href="/dashboard">Dashboard</a>
+                    <a href="/search">Search</a>
+                </div>
+                {{#if isAuthenticated}}
+                <!-- Logged-in users -->
+                <div class="user">
+                    <a href="/create">Add Stones</a>
+                    <a href="/auth/logout">Logout</a>
+                </div>
+                {{else}}
+                <!-- Guest users -->
+                <div class="guest">
+                    <a href="/auth/login">Login</a>
+                    <a href="/auth/register">Register</a>
+                </div>
+                {{/if}}
+            </nav>
+        </header>
 
-        {{{body}}}
+        <main class="home">
 
-    </main>
+            {{{body}}}
 
-    <footer>Back-End 2023</footer>
+        </main>
+
+        <footer>
+            <p>@EarthTreasureVaul</p>
+        </footer>
+    </div>
 </body>
 
 </html>
